{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 49,
  "lineage": "ff352bbf-53cc-1745-70e4-3f462eb75c39",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkInterfaces/ansible-epicbook-nic",
            "internal_domain_name_suffix": "yqbdu1ijgy0ele434xmwbfln3f.jnbx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/publicIPAddresses/ansible-epicbook-pip",
                "subnet_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet/subnets/ansible-epicbook-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southafricanorth",
            "name": "ansible-epicbook-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ansible-epicbook-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkInterfaces/ansible-epicbook-nic|/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkSecurityGroups/ansible-epicbook-nsg",
            "network_interface_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkInterfaces/ansible-epicbook-nic",
            "network_security_group_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkSecurityGroups/ansible-epicbook-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "southafricanorth",
            "name": "db-nsg",
            "resource_group_name": "ansible-epicbook-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkSecurityGroups/ansible-epicbook-nsg",
            "location": "southafricanorth",
            "name": "ansible-epicbook-nsg",
            "resource_group_name": "ansible-epicbook-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/publicIPAddresses/ansible-epicbook-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "102.133.191.91",
            "ip_version": "IPv4",
            "location": "southafricanorth",
            "name": "ansible-epicbook-pip",
            "resource_group_name": "ansible-epicbook-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "fs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ansible-epicbook-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ansible-epicbook-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet/subnets/ansible-epicbook-subnet",
            "name": "ansible-epicbook-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ansible-epicbook-rg",
            "virtual_network_name": "ansible-epicbook-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet/subnets/db-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6d3a02c4-3609-4534-93dd-f5d960956ded",
            "id": "/subscriptions/ba081637-3826-4639-9d93-a53f19698b4a/resourceGroups/ansible-epicbook-rg/providers/Microsoft.Network/virtualNetworks/ansible-epicbook-vnet",
            "location": "southafricanorth",
            "name": "ansible-epicbook-vnet",
            "resource_group_name": "ansible-epicbook-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}